k8s-lab/k8s-manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-apps
  labels:
    name: ns-apps
    environment: development
